--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,34 @@
 #main{
     background-color: saddlebrown;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    border: crimson;
+    border-width: 10px;
+    border-style: ridge;
+    margin-top: 20%;
+    margin-left: 45%;
+    border-radius: 50%;
 }
 #content{
     background-color:skyblue;
+    width: 40px;
+    height: 40px;
+    border: green 5px;
+    border-style: ridge;
+    border-radius: 50%  ;
+    align-items: center;
+    justify-content: center;
+}
+#button{
     width: 20px;
     height: 20px;
-
+    margin-top: 10px;
+    margin-left: 10px;
+    background-color: indigo;
+}
+#button:hover{
+    background-color: white;
 }
